# temporal-poc

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  activities.py  compose.yml  models.py  pyproject.toml  starter.py  worker.py  workflows.py
infra/temporal/: .env.example  AUTHZ.md  Makefile  README.md  compose.yml
infra/temporal/dynamicconfig/: development-sql.yaml
infra/temporal/scripts/: create-namespace.sh  entra-app-setup.sh  entra-assign-role.sh  gen-certs.sh  setup-schema.sh
infra/temporal/server-image/: .dockerignore  .gitignore  Dockerfile  README.md  authdebug.go  authorizer.go  authorizer_test.go  claimmapper.go  claimmapper_test.go  go.mod  go.sum  interceptor.go  interceptor_test.go  jwt_claims_test.go  main.go
infra/temporal/server-image/config/: docker.yaml
libs/temporal-client/: pyproject.toml
libs/temporal-client/src/temporal_client/: __init__.py  client.py  config.py  worker.py
services/bucket-requests/: Makefile  pyproject.toml
services/bucket-requests/src/bucket_requests/: activities.py  api.py  models.py  worker.py  workflows.py
services/compute-svc/: Makefile  pyproject.toml
services/dns-svc/: Makefile  pyproject.toml
services/dns-svc/src/dns_svc/: __init__.py  api.py
services/vm-requests/: Makefile  pyproject.toml
services/vm-requests/src/vm_requests/: activities.py  models.py  starter.py  worker.py  workflows.py
services/waas/: .gitignore  Makefile  README.md  pyproject.toml
services/waas/src/waas/: __init__.py  activities.py  api.py  config.py  store.py  worker.py  workflows.py
(+6 files in other folders)
