[project]
name = "svc-vm-requests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "temporal-client",
]

[tool.uv]
package = true

[tool.uv.sources]
temporal-client = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/vm_requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
